--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -123,7 +123,7 @@ td > p {
     padding-right: 10px;
 }
 alert {
-    font-size: 2em;
+    font-size: 3em !important;
 }
 </style>
 
@@ -247,10 +247,9 @@ alert {
                     </tr>
                     
                     <tr>
-                        <td>
+                        <td colspan="2">
                             <h3>The below fields will be transferred directly on to student action plan</h3>
                         </td>
-                        <td></td>
                     </tr>
 
                     <tr>
