--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -122,7 +122,7 @@ td > p {
     text-align: right;
     padding-right: 10px;
 }
-alert {
+alert-success {
     font-size: 3em !important;
 }
 </style>
