--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -122,8 +122,8 @@ td > p {
     text-align: right;
     padding-right: 10px;
 }
-alert-success {
-    font-size: 3em !important;
+.alert-success {
+    font-size: 2em !important;
 }
 </style>
 
@@ -157,9 +157,7 @@ alert-success {
                 		<td><input type="text" name="last_name"
                 		{% if student %} value="{% if student.data.interview %}{% if student.data.interview.last_name %}{{ student.data.interview.last_name }}{% else %}{{ student.data.last_name }}{% endif %}{% else %}{{student.data.last_name}}{% endif %}"{% endif %}
                 		></td>
-                    </tr>
 
-        	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">School</td>
 	                    <td>{% if student %}<p style="padding:6px 10px 0 100px;">{{ student.data.school }}</p>{% endif %}</td>
                     </tr>
