--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -323,7 +323,7 @@ td > p {
                         <td><p>HN courses / articulation routes discussed for consideration (if any):</p></td>
                         <td><textarea class="bigfield" name="hn_courses_discussed">{% if student %}{% if student.data.interview %}{{ student.data.interview.hn_courses_discussed }}{% endif %}{% endif %}</textarea></td>
                     </tr>
-                    {% if current_user.do_admin %}
+                    {% if current_user.view_admin %}
                     <tr>
                         <td><p>LEAPS admin notes:<br><b style="color:red;">FOR ADMIN USE ONLY</b><br>(Not included on the action plan)</p></td>
                         <td><textarea class="bigfield" name="leaps_admin_notes">{% if student %}{% if student.data.interview %}{{ student.data.interview.leaps_admin_notes }}{% endif %}{% endif %}</textarea></td>
