--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -843,7 +843,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 
 	<div class="row">
 	    <div class="col-sm-4">
-          <p>Please indicate which of these criteria applies to make you LEAPS eligible. These will be discussed
+          <p>Please indicate which of these criteria you think applies to make you LEAPS eligible. These will be discussed
           and confirmed at your interview.</p>
           <p id="can_claim_simd" style="display: none;">(Your SIMD eligibility has already been set for you, based on the post code you provided above.)</p>
           <p id="can_claim_school" style="display: none;">(Your school group has already been set for you, based on the school you provided above.)</p>
@@ -856,7 +856,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
           <input type="checkbox" id="claimed_group_school" name="claimed_group_school" style="margin-top:-3px;">
           Attend a Group 1 or Group 1+ school (Alloa, Armadale, Bannockburn, Castlebrae, Craigroyston,
           Drummond, Eyemouth, Forrester, Gracemount, Grangemouth, Liberton, Lornshill, Newbattle, Ross, St
-          Davids, Tynecastle, WHEC
+          David's, Tynecastle, WHEC)
 
       		<br><br>
       		<input type="checkbox" name="claimed_first_attending_university" style="margin-top:-3px;">
@@ -877,7 +877,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
       		<br><br>
 
       		<input type="checkbox" name="claimed_looked_after_child" style="margin-top:-3px;">
-          Care experienced (any student who,or is currently, in care.)
+          Care experienced (any student who has been, or is currently, in care.)
       		<br><br>
 
           <input type="checkbox" name="claimed_estranged" style="margin-top:-3px;">
