--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1080,7 +1080,7 @@ fieldset{
 				{% endfor %}
 				</select>
 				{% if record %}
-				    {% if record.data.interviewer %}
+				    {% if record.data.interview %}
     		    		<a class="btn btn-info" style="margin-top:-10px;" target="_blank" href="/interviews/{{ record.data.id }}/form">View interview admin form</a>
                         {% if record.data.interview.form_date %}
                             <a class="btn btn-info" style="margin-top:-10px;" target="_blank" href="/interviews/{{ record.data.id }}/plan.pdf">View / print action plan</a>
