--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1080,20 +1080,22 @@ fieldset{
 				{% endfor %}
 				</select>
 				{% if record %}
-				    {% if record.data.interview is defined %}
+				    {% if record.data.interviewer %}
     		    		<a class="btn btn-info" style="margin-top:-10px;" target="_blank" href="/interviews/{{ record.data.id }}/form">View interview admin form</a>
-                        {% if record.data.interview.form_date %}
+    				    {% if record.data.interview is defined %}{% if record.data.interview.form_date %}
                             <a class="btn btn-info" style="margin-top:-10px;" target="_blank" href="/interviews/{{ record.data.id }}/plan.pdf">View / print action plan</a>
-        				{% endif %}
-                        {% if record.data.interview.emailed_date %}
-                            Action form emailed on {{ record.data.interview.emailed_date }}
-                        {% else %}
-                            {% if record.data.interview.form_date %}
-                                {% if current_user.do_admin %}
-                                    <a class="btn btn-info" style="margin-top:-10px;" href="/interviews/{{ record.data.id }}/email">Email action plan</a>
+        				{% endif %}{% endif %}
+        				{% if record.data.interview is defined %}
+                            {% if record.data.interview.emailed_date %}
+                                Action form emailed on {{ record.data.interview.emailed_date }}
+                            {% else %}
+                                {% if record.data.interview.form_date %}
+                                    {% if current_user.do_admin %}
+                                        <a class="btn btn-info" style="margin-top:-10px;" href="/interviews/{{ record.data.id }}/email">Email action plan</a>
+            `				        {% endif %}
         `				        {% endif %}
-    `				        {% endif %}
-    				    {% endif %}
+        				    {% endif %}
+        				{% endif %}
     				{% endif %}
     			{% endif %}
 	        </p>
