layout wording alterations

--- a/portality/templates/leaps/interviews/index.html
+++ b/portality/templates/leaps/interviews/index.html
@@ -50,7 +50,7 @@ jQuery(document).ready(function() {
                 (i.e. boxes which are administrative for the LEAPS team, and boxes for the student's action plan). Please 
                 address your comments in the action plan boxes to the young person and not to LEAPS.</p>
                 
-                <p>If a student is missing from this list please call LEAPS on 0131 650 4676 / 07774336265 as soon as possible.</p>
+                <p>If a student is missing from this list please call LEAPS on 07774336265 as soon as possible.</p>
             </div>
         </div>
     </div>
