--- a/portality/templates/account/view.html
+++ b/portality/templates/account/view.html
@@ -44,13 +44,13 @@
                 {% endif %}
                 {% if account.data.perform_interviews %}
                     <p>This account can perform perform interviews.</p>
-                    {% if account.data.edit_students %}
+                    {% if current_user.do_admin or current_user.is_super %}
                     <form action="" method="post">
                 	    <input id="disable_interview" class="btn btn-info" type="submit" name="submit" value="Remove this account from interview capability">
                 	</form>
                 	{% endif %}
                 {% else %}
-                    {% if account.data.edit_students %}
+                    {% if current_user.do_admin or current_user.is_super or current_user.edit_students %}
                     <form action="" method="post">
                 	    <input id="enable_interview" class="btn btn-primary" type="submit" name="submit" value="Add interview capability to this account">
                 	</form>
