alter back to old student index name

--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -114,7 +114,7 @@ jQuery(document).ready(function() {
     }
     
     $('.facetview').facetview({
-        search_url: '/query/students?',
+        search_url: '/query/student?',
         facets: [
             {'field':'archive.exact', 'display': 'archive', 'size':1000}, 
             {'field':'school.exact', 'display': 'school', 'size':1000},
